Re #299 updating carousel JSON file and relevant CSS for carousel description alignment fix

--- a/htdocs/prod/web/assets/css/mobile.css
+++ b/htdocs/prod/web/assets/css/mobile.css
@@ -80,12 +80,12 @@
 
   .carousel-description-right {
     bottom: 0px;
-    right: 125px;
+    right: 130px;
     height: 100px;
   }
 
   .price-image {
-    width: 290px;
+    width: 142px;
   }
 
   nav ul {
